--- a/src/styles.css
+++ b/src/styles.css
@@ -1,15 +1,52 @@
-
-body {
-  background-color: blue;
+:root {
+  --primary-color: #F9F7FE;
+  --secondary-color:#272142;
+  --branding-color:#6C63FF;
+  --heading-font-family:"Playfair Display", serif ;
+  --default-font-family:"Poppins", sans-serif;
 }
+ body {
+  font-family: var(--default-font-family) ;
+ }
 
 h1 {
-  font-family: "Poppins", sans-serif ;
+  font-family: var(--heading-font-family) ;
+  font-size: 96px;
+  font-weight: 700;
   font-weight: bold;
   color: black;
 }
 
 p {
-  font-family: "Playfair Display", serif ;
+ 
   font-weight: normal;
+}
+
+.hero {
+  background-color: var(--primary-color);
+  text-align: center;
+  padding: 160px 20px;
+}
+
+.hero p {
+  font-size: 36px;
+  font-weight: 700;
+  color:var(--secondary-color) ;
+  margin: 0;
+}
+
+.hero h2 {
+  font-size: 24px;
+  font-weight: 400;
+  color: var(--secondary-color);
+  line-height: 2;
+}
+
+.btn-branding {
+  background: var(--branding-color) ;
+  color: #FFF;
+  font-size: 18px;
+  line-height: 27px;
+  padding: 18px 30px;
+  border-radius: 4px;
 }
