--- a/src/styles.css
+++ b/src/styles.css
@@ -1,16 +1,16 @@
 :root {
-  --primary-color: #F9F7FE;
-  --secondary-color:#272142;
-  --branding-color:#6C63FF;
-  --heading-font-family:"Playfair Display", serif ;
-  --default-font-family:"Poppins", sans-serif;
+  --primary-color: #f9f7fe;
+  --secondary-color: #272142;
+  --branding-color: #6c63ff;
+  --heading-font-family: "Playfair Display", serif;
+  --default-font-family: "Poppins", sans-serif;
 }
- body {
-  font-family: var(--default-font-family) ;
- }
+body {
+  font-family: var(--default-font-family);
+}
 
 h1 {
-  font-family: var(--heading-font-family) ;
+  font-family: var(--heading-font-family);
   font-size: 96px;
   font-weight: 700;
   font-weight: bold;
@@ -19,15 +19,14 @@ h1 {
 }
 
 p {
- 
   font-weight: normal;
   font-size: 16px;
-  line-height: 30px; 
+  line-height: 30px;
 }
 
 h2 {
   font-family: var(--heading-font-family);
-font-size: 64px;
+  font-size: 64px;
 }
 
 .hero {
@@ -39,7 +38,7 @@ font-size: 64px;
 .hero p {
   font-size: 36px;
   font-weight: 700;
-  color:var(--secondary-color) ;
+  color: var(--secondary-color);
   margin: 0;
 }
 
@@ -50,9 +49,33 @@ font-size: 64px;
   line-height: 2;
 }
 
+.about-section {
+  padding: 160px 20px;
+}
+
+.about-section h1 {
+  font-size: 64px;
+  line-height: 80px;
+}
+
+.about-section h2 {
+  font-size: 18px;
+  font-family: var(--default-font-family);
+}
+
+.about-section img {
+   border: 10px solid transparent;
+   padding: 15px;
+  
+}
+
+.about-section-content {
+  margin: 30px;
+}
+
 .btn-branding {
-  background: var(--branding-color) ;
-  color: #FFF;
+  background: var(--branding-color);
+  color: #fff;
   font-size: 18px;
   line-height: 27px;
   padding: 18px 30px;
@@ -66,7 +89,6 @@ font-size: 64px;
   border-radius: 4px;
   color: var(--branding-color);
   border: 1px solid var(--branding-color);
-  
 }
 
 .project-descriptions {
@@ -76,16 +98,21 @@ font-size: 64px;
 @media (max-width: 900px) {
   h1 {
     font-size: 39px;
-    line-height: 1.5;
+    line-height: 56px;
   }
   h2 {
     font-size: 44px;
   }
   .hero {
-  padding: 80px 20px;
-}
+    padding: 80px 20px;
+  }
   .project-descriptions {
     padding: 0;
     text-align: center;
+  }
+  
+  .about-section {
+    text-align: center;
+    padding: 0;
   }
 }
