--- a/src/styles.css
+++ b/src/styles.css
@@ -49,27 +49,38 @@ h2 {
   line-height: 2;
 }
 
-.about-section {
+.content-container {
   padding: 160px 20px;
 }
 
-.about-section h1 {
+.content h1 {
   font-size: 64px;
   line-height: 80px;
 }
 
-.about-section h2 {
+.content h2 {
   font-size: 18px;
   font-family: var(--default-font-family);
 }
 
-.about-section img {
-   border: 10px solid transparent;
-   padding: 15px;
+.content-container img {
+  border: 10px solid transparent;
+  padding: 15px;
   
 }
 
-.about-section-content {
+.content h3 {
+  font-size: 24px;
+  font-weight: 700;
+  font-family: var(--default-font-family);
+  line-height: 1.5;
+}
+
+.content p {
+  font-size: 14px;
+}
+
+.content {
   margin: 30px;
 }
 
@@ -111,7 +122,7 @@ h2 {
     text-align: center;
   }
   
-  .about-section {
+  .content-container {
     text-align: center;
     padding: 0;
   }
