--- a/src/styles.css
+++ b/src/styles.css
@@ -106,6 +106,38 @@ h2 {
   padding: 120px 60px;
 }
 
+.logo {
+  max-height: 40px;
+}
+
+nav li {
+  display: inline;
+  list-style: none;
+  line-height: 42px;
+  margin-left: 15px;
+}
+
+nav ul  {
+  padding: 0;
+  margin: 0;
+}
+
+nav {
+  padding: 20px 0;
+}
+
+nav a {
+  text-decoration: none;
+  color: var(--secondary-color);
+  transition: all 150ms ease-in-out;
+}
+
+nav a:hover, nav li.active a {
+  color: var(--branding-color);
+}
+
+ 
+
 @media (max-width: 900px) {
   h1 {
     font-size: 39px;
@@ -126,4 +158,6 @@ h2 {
     text-align: center;
     padding: 0;
   }
+
+  
 }
