--- a/src/styles.css
+++ b/src/styles.css
@@ -30,14 +30,14 @@ h2 {
   font-size: 64px;
 }
 
-h4 {
+h3 {
   font-size: 48px;
 }
 
 .hero {
   background-color: var(--primary-color);
   text-align: center;
-  padding: 160px 20px;
+  padding: 80px 20px;
 }
 
 .hero p {
@@ -55,7 +55,7 @@ h4 {
 }
 
 .content-container {
-  padding: 160px 20px;
+  padding: 60px 20px;
 }
 
 .content h1 {
@@ -189,10 +189,11 @@ footer .social-links a:hover {
   h2 {
     font-size: 44px;
   }
-
-  .hero {
-    padding: 80px 20px;
+  
+  h3 {
+    font-size: 26px;
   }
+
   .project-descriptions {
     padding: 0;
     text-align: center;
